# video-streaming-prototype

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/app/: mod.rs  webgl_rgb.js  webgl_script.js  webgl_yuv.js
src/utils/: yuv.rs
src/video/: h264_test.rs  mod.rs  rgb_test.rs  yuv_test.rs  yuv_test2.rs
video-viewer/: README.md  server.py
video-viewer/static/: webgl_rgb.js  webgl_script.js  wegbl_yuv.js
video-viewer/views/: index.html  rgb-stream.html  yuv-image.html  yuv-stream.html
