[package]
name = "video-streaming-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
av-data = "*"
eye = { git="https://github.com/raymanfx/eye-rs.git", rev="24324eb629dd73f349d0b4678cb0dd4dc5d75f1c" }
image = "0.24"
libaom = { git="https://github.com/sdwoodbury/aom-rs", rev="51086cef6b3eb177bdb81b511661375b82583a17" }
