[package]
name = "video-streaming-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"
openh264 = "0.5.0"

av-data = "*"
eye = { git="https://github.com/raymanfx/eye-rs.git", rev="24324eb629dd73f349d0b4678cb0dd4dc5d75f1c" }
image = "0.24"
libaom = { git="https://github.com/Satellite-im/aom-rs", branch="feat/windows-build" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = "0.21"
url = "2"

rav1e = "0.7.0"
dav1d = "0.10.2"

dioxus = { version = "0.4.3" }
dioxus-desktop = "0.4"
dioxus-html = "0.4"

[profile.profiling]
inherits = "release"
debug = true
panic = "abort"